# cli-optiga-trust-m

./: .gitignore  .gitmodules  CMakeLists.txt
trustm_engine/: trustm_engine.c  trustm_engine_common.h  trustm_engine_ipc_lock.c
trustm_helper/: trustm_helper_ipc_lock.c
